# tlafmt

./: .pre-commit-config.yaml  Cargo.toml  GNUmakefile  README.md
.github/: dependabot.yml
libtlafmt/: Cargo.toml  README.md  build.rs
libtlafmt/fuzz/: Cargo.toml
libtlafmt/fuzz/fuzz_targets/: e2e.rs  module_body.rs
libtlafmt/src/: lib.rs  renderer.rs  test_utils.rs  token.rs
libtlafmt/src/ast_format/: case.rs  comment.rs  list_item.rs  mod.rs  module.rs  node.rs
libtlafmt/src/ast_format/snapshots/: libtlafmt__ast_format__case__tests__box_arm_newlines.snap  libtlafmt__ast_format__case__tests__comments.snap  libtlafmt__ast_format__case__tests__conj_arms.snap  libtlafmt__ast_format__case__tests__fuzz_error_node_kind.snap  libtlafmt__ast_format__case__tests__keyword_line.snap  libtlafmt__ast_format__case__tests__multiline_pointer.snap  libtlafmt__ast_format__case__tests__other.snap  libtlafmt__ast_format__comment__tests__block.snap  libtlafmt__ast_format__comment__tests__comment_let_in_list.snap  libtlafmt__ast_format__comment__tests__comment_with_lists.snap  libtlafmt__ast_format__comment__tests__operator_long_form_inline_comment.snap  libtlafmt__ast_format__module__tests__module_header_even_odd_length-2.snap  libtlafmt__ast_format__module__tests__module_header_even_odd_length.snap  libtlafmt__ast_format__module__tests__module_header_length_normalisation.snap  libtlafmt__ast_format__module__tests__module_header_length_trim.snap  libtlafmt__ast_format__module__tests__newline_squashing.snap  libtlafmt__ast_format__node__tests__basic.snap  libtlafmt__ast_format__node__tests__basic_conj.snap  libtlafmt__ast_format__node__tests__bounded_quantification.snap  libtlafmt__ast_format__node__tests__bounded_quantifier_with_list.snap  libtlafmt__ast_format__node__tests__comment_let_in_list.snap  libtlafmt__ast_format__node__tests__comment_with_lists.snap  libtlafmt__ast_format__node__tests__empty_set_seq.snap  libtlafmt__ast_format__node__tests__if_then_else.snap  libtlafmt__ast_format__node__tests__inline_comment_col_0.snap  libtlafmt__ast_format__node__tests__let_in_big.snap  libtlafmt__ast_format__node__tests__let_in_no_in.snap  libtlafmt__ast_format__node__tests__let_in_small.snap  libtlafmt__ast_format__node__tests__long_line.snap  libtlafmt__ast_format__node__tests__lor.snap  libtlafmt__ast_format__node__tests__multi_line_conjunction.snap  libtlafmt__ast_format__node__tests__newline_indent_non_list.snap  libtlafmt__ast_format__node__tests__number_sets.snap  libtlafmt__ast_format__node__tests__one_line.snap  libtlafmt__ast_format__node__tests__operator_long_form_args.snap  (+15 more)
libtlafmt/src/helpers/: indent.rs  mod.rs  newline.rs
libtlafmt/src/renderer/: comment.rs  indent.rs  mod.rs  renderer.rs
libtlafmt/src/snapshots/: libtlafmt__tests__corpus@BlockingQueue.tla.snap  libtlafmt__tests__corpus@differential_equations.tla.snap  libtlafmt__tests__corpus@health_circuit.tla.snap  libtlafmt__tests__corpus@key_value_store.tla.snap  libtlafmt__tests__corpus@raft.tla.snap  libtlafmt__tests__mixed_tabs_spaces.snap
libtlafmt/tests/: format.rs
libtlafmt/tests/corpus/: BlockingQueue.tla  differential_equations.tla
libtlafmt/tests/snapshots/: format__corpus@2PCwithBTM.tla.snap  format__corpus@ABCorrectness.tla.snap  format__corpus@ACP_NB.tla.snap  format__corpus@ACP_NB_TLC.tla.snap  format__corpus@ACP_NB_WRONG_TLC.tla.snap  format__corpus@ACP_SB.tla.snap  format__corpus@ACP_SB_TLC.tla.snap  format__corpus@AddTwo.tla.snap  format__corpus@Age_Channel.tla.snap  format__corpus@AllocatorImplementation.tla.snap  format__corpus@AllocatorRefinement.tla.snap  format__corpus@Alternate.tla.snap  format__corpus@AlternatingBit.tla.snap  format__corpus@AsyncTerminationDetection.tla.snap  format__corpus@AsyncTerminationDetection_proof.tla.snap  format__corpus@AsynchInterface.tla.snap  format__corpus@BNFGrammars.tla.snap  format__corpus@Bags.tla.snap  format__corpus@Bakery.tla.snap  format__corpus@BinaryHourClock.tla.snap  format__corpus@BinarySearch.tla.snap  format__corpus@Bits.tla.snap  format__corpus@BlockingQueue.tla.snap  format__corpus@Boulanger.tla.snap  format__corpus@BufferedRandomAccessFile.tla.snap  format__corpus@CRDT.tla.snap  format__corpus@CRDT_proof.tla.snap  format__corpus@CarTalkPuzzle.tla.snap  format__corpus@Chameneos.tla.snap  format__corpus@ChangRoberts.tla.snap  format__corpus@Channel.tla.snap  format__corpus@ChannelRefinement.tla.snap  format__corpus@CheckpointCoordination.tla.snap  format__corpus@CigaretteSmokers.tla.snap  format__corpus@CoffeeCan.tla.snap  format__corpus@CompositeFIFO.tla.snap  format__corpus@ConfigFileGrammar.tla.snap  format__corpus@Consensus.tla.snap  format__corpus@DieHard.tla.snap  format__corpus@DieHarder.tla.snap  (+203 more)
src/: main.rs
(+28 files in other folders)
