[package]
name = "tlafmt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
libtlafmt = { path = "libtlafmt" }
tempfile = "3.17.1"
thiserror = "2.0.11"

[workspace]
members = ["libtlafmt"]

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = { version = "3.1.3", default-features = false }
pretty_assertions = "1.4.1"
