[package]
name = "tlafmt"
version = "0.4.0"
edition = "2021"
authors = ["Dom <dom@itsallbroken.com>"]
description = "A formatter for TLA+ specs"
repository = "https://github.com/domodwyer/tlafmt"
license = "Apache-2.0"
categories = ["command-line-utilities", "development-tools"]
keywords = ["tla", "plus", "tla+", "formatter"]

[dependencies]
anstyle = "1.0.10"
clap = { version = "4.5.32", features = ["derive"] }
diff = "0.1.13"
libtlafmt = { path = "libtlafmt", version = "0.4.0" }
tempfile = "3.19.1"
thiserror = "2.0.12"

[dev-dependencies]
assert_cmd = "2.0.16"
insta = "1.42.2"
predicates = { version = "3.1.3", default-features = false }
pretty_assertions = "1.4.1"

[workspace]
members = ["libtlafmt"]

[workspace.lints.clippy]
match_like_matches_macro = "allow"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
explicit_iter_loop = "warn"
future_not_send = "warn"
todo = "warn"
use_self = "warn"

[workspace.lints.rust]
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
unused_crate_dependencies = "warn"
unreachable_pub = "warn"
missing_docs = "warn"
