[package]
name = "libtlafmt"
version = "0.4.1"
edition = "2021"
authors = ["Dom <dom@itsallbroken.com>"]
description = "A formatter library for TLA+ specs, core of tlafmt"
documentation = "https://docs.rs/tlafmt"
repository = "https://github.com/domodwyer/tlafmt"
license = "Apache-2.0"
categories = ["command-line-utilities", "development-tools"]
keywords = ["tla", "plus", "tla+", "formatter"]

[dependencies]
thiserror = "2.0.17"
tree-sitter = "0.25.10"
tree-sitter-tlaplus = "1.5.0"

[dev-dependencies]
insta = { version = "1.45.1", features = ["glob"] }
pretty_assertions = "1.4.1"

[lints]
workspace = true
