[package]
name = "libtlafmt-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.libtlafmt]
path = ".."

[[bin]]
name = "e2e"
path = "fuzz_targets/e2e.rs"
test = false
doc = false
bench = false

[workspace]

[[bin]]
name = "module_body"
path = "fuzz_targets/module_body.rs"
test = false
doc = false
bench = false
